--- a/G/pom.xml
+++ b/G/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl</artifactId>
+            <version>17.2</version>
+        </dependency>
     </dependencies>
 
     <build>
